test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(type int(64))'
$CHPL_HOME/modules/standard/IO.chpl:: note: this candidate did not match: writeln(const args ...?n)
test_write_type_error.chpl:: note: because type call actual argument #1
$CHPL_HOME/modules/standard/IO.chpl:: note: is passed to non-type formal 'const _e1_args'
$CHPL_HOME/modules/standard/IO.chpl:: note: candidates are: writeln()
$CHPL_HOME/modules/standard/IO.chpl:: note:                 channel.writeln()
note: and 2 other candidates, use --print-all-candidates to see them
